--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
-.app{
-    width: 100%;
-    height: 100%;
-    position: relative;
-    margin-top: 4rem;
+.app {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.app-share {
+  width: 80%;
+  margin: 0px auto;
+  text-align: right;
 }
 
 .app-profile {
@@ -21,6 +30,24 @@
   position: relative;
 }
 
+.app-profile--img:before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: black;
+  top: 0rem;
+  left: 0rem;
+  opacity: 0.4;
+  visibility: hidden;
+}
+
+.app-profile--img:hover:before {
+  cursor: pointer;
+  visibility: visible;
+}
+
 .app-profile--img > img {
   width: 100%;
   height: 100%;
@@ -28,26 +55,25 @@
 }
 
 .app-profile--links > p {
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
 }
 
-.app-profile--links > p:nth-child(2){
-    /* visibility: hidden; */
-    display: none;
-
+.app-profile--links > p:nth-child(2) {
+  /* visibility: hidden; */
+  display: none;
 }
 
 .link {
   width: 85%;
-  margin: 0px auto;
+  margin: 20px auto;
   background: #eaecf0;
   color: #101828;
   text-align: center;
   font-size: 18px;
   line-height: 28px;
   border-radius: 8px;
-  padding: 24px 0px ;
-  display: block;
+  padding: 24px 0px;
+  text-decoration: none;
 }
