--- a/src/App.css
+++ b/src/App.css
@@ -67,13 +67,72 @@
 
 .link {
   width: 85%;
-  margin: 20px auto;
+  margin: 15px auto;
   background: #eaecf0;
-  color: #101828;
   text-align: center;
-  font-size: 18px;
-  line-height: 28px;
   border-radius: 8px;
   padding: 24px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.link a {
   text-decoration: none;
+  color: #101828;
+  font-size: 18px;
+  margin: auto 40px;
+}
+
+.link img {
+  visibility: hidden;
+}
+
+.link:hover img {
+  visibility: visible;
+}
+
+.link:hover {
+  background: black;
+  opacity: 0.6;
+}
+
+.link:hover a {
+  color: white;
+}
+
+.app-socials {
+  width: 80%;
+  margin: 30px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app-socials img {
+  width: 40px;
+  margin: auto 20px;
+}
+
+.app-zuri {
+  width: 80%;
+  margin: 30px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.app-zuri img{
+  width: 100px;
+}
+
+.app-zuri p {
+  display: none;
+}
+
+@media screen and (min-width: 800px) {
+
+  .app-zuri p {
+     display: flex;
+  }
 }
