--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@
 .link a {
   text-decoration: none;
   color: #101828;
-  font-size: 18px;
+  font-size: 15px;
   margin: auto 40px;
 }
 
@@ -122,7 +122,7 @@
   align-items: center;
 }
 
-.app-zuri img{
+.app-zuri img {
   width: 100px;
 }
 
@@ -131,8 +131,11 @@
 }
 
 @media screen and (min-width: 800px) {
-
   .app-zuri p {
-     display: flex;
+    display: flex;
+  }
+
+  .link a {
+    font-size: 18px;
   }
 }
