--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -1,5 +1,5 @@
 .contact {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -71,7 +71,12 @@
 
 .contact-form--checkbox {
   align-self: flex-start;
-  margin: 15px 0px;
+  margin: 30px 0px 15px 0px;
+}
+
+.contact-form--checkbox input[type="checkbox"]:checked .contact-form-button {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .contact-form--checkbox span {
@@ -93,7 +98,7 @@
 .contact-form-button {
   width: 100%;
   padding: 0.7rem;
-  background: blue;
+  background: #1570ef;
   color: white;
   font-size: 17px;
   font-weight: 600;
@@ -101,11 +106,12 @@
   outline: none;
   border: none;
   text-transform: capitalize;
+  cursor: pointer;
 }
 
-.input-field{
-    position: relative;
-    margin: 10px 0px;
+.input-field {
+  position: relative;
+  margin: 10px 0px;
 }
 
 .input-field label {
@@ -114,19 +120,26 @@
   font-weight: 500;
   line-height: 30px;
   text-transform: capitalize;
-
 }
-.input-field input{
-    width: 100%;
-    padding: 15px 0px;
-    outline: none;
-    border-radius: 5px;
-    text-indent: 10px;
-    border: 1px solid black;
+.input-field input {
+  width: 100%;
+  padding: 15px 0px;
+  outline: none;
+  border-radius: 5px;
+  text-indent: 10px;
+  border: 1px solid black;
 }
 
-.input-field input::placeholder{
-    font-size: 16px;
+.input-field input:invalid{
+    border: 2px solid red;
+}
+
+.input-field input:focus:valid{
+    border: 2px solid green;
+}
+
+.input-field input::placeholder {
+  font-size: 16px;
 }
 
 .error-message {
@@ -134,6 +147,7 @@
   opacity: 0.5;
   font-size: 15px;
   font-weight: bold;
+   line-height: 30px;
 }
 
 @media screen and (min-width: 768px) {
